--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "files": [
     "src"
   ],
+  "scripts": {
+    "test": "jest --watch"
+  },
   "devDependencies": {
-    "eslint": "^8.18.0"
+    "eslint": "^8.18.0",
+    "jest": "^28.1.1"
   }
 }
